try add vacine tables

--- a/create_er_diagram/output_dir/relationships.html
+++ b/create_er_diagram/output_dir/relationships.html
@@ -93,27 +93,31 @@
                                 <div class="tab-content no-padding">
                                     <div class="chart tab-pane active" id="compactDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="compactRelationshipsDiagram" name="compactRelationshipsDiagram">
-<area shape="rect" id="node1" href="tables/employee_service.html" target="_top" title="employee_service" alt="" coords="614,349,857,502">
-<area shape="rect" id="node5" href="tables/employee.html" target="_top" title="employee" alt="" coords="399,392,570,545">
-<area shape="rect" id="node6" href="tables/service.html" target="_top" title="service" alt="" coords="411,251,558,374">
-<area shape="rect" id="node2" href="tables/order1.html" target="_top" title="order1" alt="" coords="655,5,816,246">
-<area shape="rect" id="node3" href="tables/owner.html" target="_top" title="owner" alt="" coords="200,41,350,194">
-<area shape="rect" id="node7" href="tables/pet.html" target="_top" title="pet" alt="" coords="408,51,560,233">
-<area shape="rect" id="node4" href="tables/person.html" target="_top" title="person" alt="" coords="5,225,150,349">
-<area shape="rect" id="node8" href="tables/pet_type.html" target="_top" title="pet_type" alt="" coords="194,212,355,335">
+<area shape="rect" id="node1" href="tables/employee_service.html" target="_top" title="employee_service" alt="" coords="626,543,869,695">
+<area shape="rect" id="node5" href="tables/employee.html" target="_top" title="employee" alt="" coords="405,579,576,731">
+<area shape="rect" id="node6" href="tables/service.html" target="_top" title="service" alt="" coords="417,437,564,561">
+<area shape="rect" id="node2" href="tables/order1.html" target="_top" title="order1" alt="" coords="667,248,828,489">
+<area shape="rect" id="node3" href="tables/owner.html" target="_top" title="owner" alt="" coords="200,228,350,381">
+<area shape="rect" id="node9" href="tables/pet.html" target="_top" title="pet" alt="" coords="414,237,566,419">
+<area shape="rect" id="node4" href="tables/person.html" target="_top" title="person" alt="" coords="5,412,150,535">
+<area shape="rect" id="node7" href="tables/vacine.html" target="_top" title="vacine" alt="" coords="662,5,834,158">
+<area shape="rect" id="node8" href="tables/vacinetype.html" target="_top" title="vacinetype" alt="" coords="399,35,582,158">
+<area shape="rect" id="node10" href="tables/pet_type.html" target="_top" title="pet_type" alt="" coords="194,399,355,522">
 </map>
                                         <a name='diagram'><img id="compactDegreeImg" src="diagrams/summary/relationships.real.compact.png" usemap="#compactRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                     <div class="chart tab-pane " id="largeDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="largeRelationshipsDiagram" name="largeRelationshipsDiagram">
-<area shape="rect" id="node1" href="tables/employee_service.html" target="_top" title="employee_service" alt="" coords="614,441,857,597">
-<area shape="rect" id="node5" href="tables/employee.html" target="_top" title="employee" alt="" coords="399,484,570,640">
-<area shape="rect" id="node6" href="tables/service.html" target="_top" title="service" alt="" coords="411,340,558,467">
-<area shape="rect" id="node2" href="tables/order1.html" target="_top" title="order1" alt="" coords="655,5,816,337">
-<area shape="rect" id="node3" href="tables/owner.html" target="_top" title="owner" alt="" coords="200,124,350,280">
-<area shape="rect" id="node7" href="tables/pet.html" target="_top" title="pet" alt="" coords="408,49,560,323">
-<area shape="rect" id="node4" href="tables/person.html" target="_top" title="person" alt="" coords="5,312,150,527">
-<area shape="rect" id="node8" href="tables/pet_type.html" target="_top" title="pet_type" alt="" coords="194,297,355,424">
+<area shape="rect" id="node1" href="tables/employee_service.html" target="_top" title="employee_service" alt="" coords="626,657,869,813">
+<area shape="rect" id="node5" href="tables/employee.html" target="_top" title="employee" alt="" coords="405,691,576,847">
+<area shape="rect" id="node6" href="tables/service.html" target="_top" title="service" alt="" coords="417,547,564,673">
+<area shape="rect" id="node2" href="tables/order1.html" target="_top" title="order1" alt="" coords="667,275,828,607">
+<area shape="rect" id="node3" href="tables/owner.html" target="_top" title="owner" alt="" coords="200,331,350,487">
+<area shape="rect" id="node9" href="tables/pet.html" target="_top" title="pet" alt="" coords="414,256,566,529">
+<area shape="rect" id="node4" href="tables/person.html" target="_top" title="person" alt="" coords="5,519,150,733">
+<area shape="rect" id="node7" href="tables/vacine.html" target="_top" title="vacine" alt="" coords="662,5,834,191">
+<area shape="rect" id="node8" href="tables/vacinetype.html" target="_top" title="vacinetype" alt="" coords="399,35,582,161">
+<area shape="rect" id="node10" href="tables/pet_type.html" target="_top" title="pet_type" alt="" coords="194,504,355,631">
 </map>
                                         <a name='diagram'><img id="largeDegreeImg" src="diagrams/summary/relationships.real.large.png" usemap="#largeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
