--- a/create_er_diagram/output_dir/tables/order1.html
+++ b/create_er_diagram/output_dir/tables/order1.html
@@ -373,23 +373,24 @@
                                     <div class="chart tab-pane active" id="oneDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="oneDegreeRelationshipsDiagram" name="oneDegreeRelationshipsDiagram">
 <area shape="rect" id="node1" href="order1.html" target="_top" title="order1" alt="" coords="414,40,712,377">
-<area shape="rect" id="node2" href="employee.html" target="_top" title="employee" alt="" coords="200,385,370,538">
-<area shape="rect" id="node3" href="owner.html" target="_top" title="owner" alt="" coords="5,105,156,258">
-<area shape="rect" id="node4" href="pet.html" target="_top" title="pet" alt="" coords="209,185,361,367">
-<area shape="rect" id="node5" href="service.html" target="_top" title="service" alt="" coords="211,44,359,167">
+<area shape="rect" id="node2" href="employee.html" target="_top" title="employee" alt="" coords="200,415,370,568">
+<area shape="rect" id="node3" href="owner.html" target="_top" title="owner" alt="" coords="5,120,156,273">
+<area shape="rect" id="node4" href="pet.html" target="_top" title="pet" alt="" coords="209,186,361,397">
+<area shape="rect" id="node5" href="service.html" target="_top" title="service" alt="" coords="211,44,359,168">
 </map>
                                         <a name='diagram'><img id="oneDegreeImg" src="../diagrams/tables/order1.1degree.png" usemap="#oneDegreeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                     <div class="chart tab-pane " id="twodegreesDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="twoDegreesRelationshipsDiagram" name="twoDegreesRelationshipsDiagram">
 <area shape="rect" id="node1" href="employee.html" target="_top" title="employee" alt="" coords="399,147,570,299">
-<area shape="rect" id="node2" href="person.html" target="_top" title="person" alt="" coords="5,227,150,321">
+<area shape="rect" id="node2" href="person.html" target="_top" title="person" alt="" coords="5,215,150,309">
 <area shape="rect" id="node3" href="employee_service.html" target="_top" title="employee_service" alt="" coords="641,39,884,133">
 <area shape="rect" id="node4" href="service.html" target="_top" title="service" alt="" coords="411,5,558,129">
 <area shape="rect" id="node5" href="order1.html" target="_top" title="order1" alt="" coords="614,212,911,549">
-<area shape="rect" id="node6" href="owner.html" target="_top" title="owner" alt="" coords="206,272,344,366">
-<area shape="rect" id="node7" href="pet.html" target="_top" title="pet" alt="" coords="428,352,541,446">
-<area shape="rect" id="node8" href="pet_type.html" target="_top" title="pet_type" alt="" coords="194,384,355,478">
+<area shape="rect" id="node6" href="owner.html" target="_top" title="owner" alt="" coords="206,253,344,347">
+<area shape="rect" id="node7" href="pet.html" target="_top" title="pet" alt="" coords="428,360,541,454">
+<area shape="rect" id="node8" href="pet_type.html" target="_top" title="pet_type" alt="" coords="194,365,355,459">
+<area shape="rect" id="node9" href="vacine.html" target="_top" title="vacine" alt="" coords="204,477,345,571">
 </map>
                                         <a name='diagram'><img id="twodegreesDegreeImg" src="../diagrams/tables/order1.2degrees.png" usemap="#twoDegreesRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
