--- a/create_er_diagram/output_dir/tables/owner.html
+++ b/create_er_diagram/output_dir/tables/owner.html
@@ -234,21 +234,22 @@
                                     <div class="chart tab-pane active" id="oneDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="oneDegreeRelationshipsDiagram" name="oneDegreeRelationshipsDiagram">
 <area shape="rect" id="node1" href="order1.html" target="_top" title="order1" alt="" coords="684,5,846,246">
-<area shape="rect" id="node2" href="owner.html" target="_top" title="owner" alt="" coords="194,90,444,252">
-<area shape="rect" id="node3" href="pet.html" target="_top" title="pet" alt="" coords="488,103,640,285">
-<area shape="rect" id="node4" href="person.html" target="_top" title="person" alt="" coords="5,151,150,274">
+<area shape="rect" id="node2" href="owner.html" target="_top" title="owner" alt="" coords="194,105,444,266">
+<area shape="rect" id="node3" href="pet.html" target="_top" title="pet" alt="" coords="488,103,640,314">
+<area shape="rect" id="node4" href="person.html" target="_top" title="person" alt="" coords="5,165,150,289">
 </map>
                                         <a name='diagram'><img id="oneDegreeImg" src="../diagrams/tables/owner.1degree.png" usemap="#oneDegreeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                     <div class="chart tab-pane " id="twodegreesDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="twoDegreesRelationshipsDiagram" name="twoDegreesRelationshipsDiagram">
-<area shape="rect" id="node1" href="employee.html" target="_top" title="employee" alt="" coords="234,5,404,99">
-<area shape="rect" id="node2" href="person.html" target="_top" title="person" alt="" coords="5,91,150,214">
-<area shape="rect" id="node3" href="order1.html" target="_top" title="order1" alt="" coords="680,141,824,235">
-<area shape="rect" id="node4" href="owner.html" target="_top" title="owner" alt="" coords="194,117,444,278">
-<area shape="rect" id="node5" href="pet.html" target="_top" title="pet" alt="" coords="506,177,619,271">
-<area shape="rect" id="node6" href="service.html" target="_top" title="service" alt="" coords="488,289,636,383">
-<area shape="rect" id="node7" href="pet_type.html" target="_top" title="pet_type" alt="" coords="239,296,400,390">
+<area shape="rect" id="node1" href="employee.html" target="_top" title="employee" alt="" coords="488,5,659,99">
+<area shape="rect" id="node2" href="person.html" target="_top" title="person" alt="" coords="5,68,150,191">
+<area shape="rect" id="node3" href="order1.html" target="_top" title="order1" alt="" coords="703,121,846,215">
+<area shape="rect" id="node4" href="owner.html" target="_top" title="owner" alt="" coords="194,77,444,238">
+<area shape="rect" id="node5" href="pet.html" target="_top" title="pet" alt="" coords="517,157,630,251">
+<area shape="rect" id="node6" href="service.html" target="_top" title="service" alt="" coords="500,269,647,363">
+<area shape="rect" id="node7" href="pet_type.html" target="_top" title="pet_type" alt="" coords="239,256,400,350">
+<area shape="rect" id="node8" href="vacine.html" target="_top" title="vacine" alt="" coords="249,368,390,462">
 </map>
                                         <a name='diagram'><img id="twodegreesDegreeImg" src="../diagrams/tables/owner.2degrees.png" usemap="#twoDegreesRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
