--- a/create_er_diagram/output_dir/tables/pet_type.html
+++ b/create_er_diagram/output_dir/tables/pet_type.html
@@ -206,17 +206,18 @@
                                 <div class="tab-content no-padding">
                                     <div class="chart tab-pane active" id="oneDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="oneDegreeRelationshipsDiagram" name="oneDegreeRelationshipsDiagram">
-<area shape="rect" id="node1" href="pet.html" target="_top" title="pet" alt="" coords="301,5,453,187">
-<area shape="rect" id="node2" href="pet_type.html" target="_top" title="pet_type" alt="" coords="5,32,257,164">
+<area shape="rect" id="node1" href="pet.html" target="_top" title="pet" alt="" coords="301,5,453,217">
+<area shape="rect" id="node2" href="pet_type.html" target="_top" title="pet_type" alt="" coords="5,61,257,193">
 </map>
                                         <a name='diagram'><img id="oneDegreeImg" src="../diagrams/tables/pet_type.1degree.png" usemap="#oneDegreeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                     <div class="chart tab-pane " id="twodegreesDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="twoDegreesRelationshipsDiagram" name="twoDegreesRelationshipsDiagram">
-<area shape="rect" id="node1" href="order1.html" target="_top" title="order1" alt="" coords="497,87,640,181">
-<area shape="rect" id="node2" href="owner.html" target="_top" title="owner" alt="" coords="62,164,200,258">
-<area shape="rect" id="node3" href="pet.html" target="_top" title="pet" alt="" coords="301,5,453,187">
-<area shape="rect" id="node4" href="pet_type.html" target="_top" title="pet_type" alt="" coords="5,14,257,146">
+<area shape="rect" id="node1" href="order1.html" target="_top" title="order1" alt="" coords="497,164,640,258">
+<area shape="rect" id="node2" href="owner.html" target="_top" title="owner" alt="" coords="62,267,200,361">
+<area shape="rect" id="node3" href="pet.html" target="_top" title="pet" alt="" coords="301,67,453,278">
+<area shape="rect" id="node4" href="pet_type.html" target="_top" title="pet_type" alt="" coords="5,117,257,249">
+<area shape="rect" id="node5" href="vacine.html" target="_top" title="vacine" alt="" coords="60,5,202,99">
 </map>
                                         <a name='diagram'><img id="twodegreesDegreeImg" src="../diagrams/tables/pet_type.2degrees.png" usemap="#twoDegreesRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
