--- a/create_er_diagram/output_dir/tables/vacine.html
+++ b/create_er_diagram/output_dir/tables/vacine.html
@@ -117,6 +117,11 @@
                                     <td>null</td>
                                     <td>
                                         <table border='0' cellspacing='0' cellpadding='0'>
+                                            <tr>
+                                                <td title="pet.vacine_id references vacine.vacine_id via fk_pet_vacine"><a href='pet.html'>pet</a><span class='relatedKey'>.vacine_id</span></td>
+                                                <td class="constraint detail">fk_pet_vacine</td>
+                                                <td class="constraint detail"><span title='Restrict delete:&#10;Parent cannot be deleted if children exist'>R</span></td>
+                                            </tr>
                                         </table>
                                     </td>
                                     <td>
@@ -153,7 +158,7 @@
                                     <td>29,6</td>
                                     <td title=''></td>
                                     <td title=''></td>
-                                    <td>null</td>
+                                    <td>now()</td>
                                     <td>
                                         <table border='0' cellspacing='0' cellpadding='0'>
                                         </table>
@@ -235,14 +240,27 @@
                                 <h5>Close relationships within degrees of separation</h5>
                                 <ul class="nav nav-tabs pull-left ui-sortable-handle">
                                     <li class="active"><a href="#oneDegreeImg-chart" data-toggle="tab" aria-expanded="true">One</a></li>
+                                    <li class=""><a href="#twodegreesDegreeImg-chart" data-toggle="tab" aria-expanded="true">Two degrees</a></li>
                                 </ul>
                                 <div class="tab-content no-padding">
                                     <div class="chart tab-pane active" id="oneDegreeImg-chart" style="position: relative; overflow-x:auto;">
                                         <map id="oneDegreeRelationshipsDiagram" name="oneDegreeRelationshipsDiagram">
-<area shape="rect" id="node1" href="vacine.html" target="_top" title="vacine" alt="" coords="232,5,540,196">
-<area shape="rect" id="node2" href="vacinetype.html" target="_top" title="vacinetype" alt="" coords="5,38,188,161">
+<area shape="rect" id="node1" href="pet.html" target="_top" title="pet" alt="" coords="584,5,736,217">
+<area shape="rect" id="node2" href="vacine.html" target="_top" title="vacine" alt="" coords="232,32,540,222">
+<area shape="rect" id="node3" href="vacinetype.html" target="_top" title="vacinetype" alt="" coords="5,64,188,187">
 </map>
                                         <a name='diagram'><img id="oneDegreeImg" src="../diagrams/tables/vacine.1degree.png" usemap="#oneDegreeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
+                                    </div>
+                                    <div class="chart tab-pane " id="twodegreesDegreeImg-chart" style="position: relative; overflow-x:auto;">
+                                        <map id="twoDegreesRelationshipsDiagram" name="twoDegreesRelationshipsDiagram">
+<area shape="rect" id="node1" href="order1.html" target="_top" title="order1" alt="" coords="780,246,924,340">
+<area shape="rect" id="node2" href="owner.html" target="_top" title="owner" alt="" coords="317,330,455,424">
+<area shape="rect" id="node3" href="pet.html" target="_top" title="pet" alt="" coords="584,150,736,361">
+<area shape="rect" id="node4" href="pet_type.html" target="_top" title="pet_type" alt="" coords="305,214,466,308">
+<area shape="rect" id="node5" href="vacine.html" target="_top" title="vacine" alt="" coords="232,5,540,196">
+<area shape="rect" id="node6" href="vacinetype.html" target="_top" title="vacinetype" alt="" coords="5,38,188,161">
+</map>
+                                        <a name='diagram'><img id="twodegreesDegreeImg" src="../diagrams/tables/vacine.2degrees.png" usemap="#twoDegreesRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                 </div>
                             </div>
