--- a/create_er_diagram/output_dir/tables/vacinetype.html
+++ b/create_er_diagram/output_dir/tables/vacinetype.html
@@ -201,6 +201,7 @@
                                 <h5>Close relationships within degrees of separation</h5>
                                 <ul class="nav nav-tabs pull-left ui-sortable-handle">
                                     <li class="active"><a href="#oneDegreeImg-chart" data-toggle="tab" aria-expanded="true">One</a></li>
+                                    <li class=""><a href="#twodegreesDegreeImg-chart" data-toggle="tab" aria-expanded="true">Two degrees</a></li>
                                 </ul>
                                 <div class="tab-content no-padding">
                                     <div class="chart tab-pane active" id="oneDegreeImg-chart" style="position: relative; overflow-x:auto;">
@@ -209,6 +210,14 @@
 <area shape="rect" id="node2" href="vacinetype.html" target="_top" title="vacinetype" alt="" coords="5,32,284,164">
 </map>
                                         <a name='diagram'><img id="oneDegreeImg" src="../diagrams/tables/vacinetype.1degree.png" usemap="#oneDegreeRelationshipsDiagram" class="diagram" border="0" align="left"></a>
+                                    </div>
+                                    <div class="chart tab-pane " id="twodegreesDegreeImg-chart" style="position: relative; overflow-x:auto;">
+                                        <map id="twoDegreesRelationshipsDiagram" name="twoDegreesRelationshipsDiagram">
+<area shape="rect" id="node1" href="pet.html" target="_top" title="pet" alt="" coords="544,8,657,102">
+<area shape="rect" id="node2" href="vacine.html" target="_top" title="vacine" alt="" coords="328,5,500,158">
+<area shape="rect" id="node3" href="vacinetype.html" target="_top" title="vacinetype" alt="" coords="5,32,284,164">
+</map>
+                                        <a name='diagram'><img id="twodegreesDegreeImg" src="../diagrams/tables/vacinetype.2degrees.png" usemap="#twoDegreesRelationshipsDiagram" class="diagram" border="0" align="left"></a>
                                     </div>
                                 </div>
                             </div>
